<resources>
    <string name="app_name">Blood Portal</string>
    <string name="welcome">Welcome</string>
    <string name="type">Select your type :</string>
    <string name="donor">Donor</string>
    <string name="recipient">Recipient</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="username">Username/Email</string>
    <string name="password">Password</string>
    <string name="forget">Forget Password</string>
    <string name="not_register">Not Register</string>
    <string name="register">Register</string>
    <string-array name="blood_type">
        <item>Select Blood Group</item>
        <item>A</item>
        <item>-A</item>
        <item>B</item>
        <item>-B</item>
        <item>O</item>
        <item>-O</item>
        <item>-AB</item>
        <item>AB</item>
    </string-array>
</resources>
