<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/redColor"

    android:padding="50dp"
    tools:context="portal.bloood.portal.Login">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#333333"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="30sp"/>
    <EditText
        android:id="@+id/username1"
        android:background="@color/whiteColor"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:textColor="#333333"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/password1"
        android:background="@color/whiteColor"
        android:padding="10dp"
        android:textColor="#333333"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/password"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/login"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/forget"
                android:onClick="forgotPassword"
                android:clickable="true"
                android:focusable="true"
                />
        <TextView
                android:id="@+id/not_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/not_register"
                android:onClick="not_register"
                android:clickable="true"
                android:focusable="true"
                />
    </LinearLayout>


</LinearLayout>