<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/redColor"
    android:padding="50dp"
    tools:context="portal.bloood.portal.Registration">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textColor="#333333"
        android:gravity="center"
        android:textSize="30sp"/>
    <EditText
        android:id="@+id/full_name"
        android:hint="Full Name"
        android:layout_width="match_parent"
        android:textColor="#333333"
        android:layout_height="wrap_content"
        android:background="@color/whiteColor"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:inputType="text"/>

    <EditText
        android:background="@color/whiteColor"
        android:padding="10dp"
        android:id="@+id/email"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:textColor="#333333"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"/>

    <Spinner
        android:id="@+id/spinner"
        android:background="@color/whiteColor"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"/>
    <EditText
        android:id="@+id/address"
        android:hint="Address"
        android:layout_width="match_parent"
        android:background="@color/whiteColor"
        android:padding="10dp"
        android:textColor="#333333"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/phone_no"
        android:hint="Phone No"
        android:layout_width="match_parent"
        android:background="@color/whiteColor"
        android:padding="10dp"
        android:textColor="#333333"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:inputType="phone"/>
    <EditText
        android:id="@+id/password"
        android:background="@color/whiteColor"
        android:padding="10dp"
        android:textColor="#333333"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/register"/>
</LinearLayout>